大改造した Close #37

--- a/res/layout/mainactivity_layout.xml
+++ b/res/layout/mainactivity_layout.xml
@@ -11,9 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/relativeLayout1"
-        android:background="@color/White"
-        android:footerDividersEnabled="true"
-        android:headerDividersEnabled="true" />
+        android:background="@color/White" />
 
     <ListView
         android:id="@+id/listView_mentions"
@@ -23,8 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/relativeLayout1"
-        android:background="@color/White"
-        android:fastScrollEnabled="true" />
+        android:background="@color/White" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
