--- a/res/layout/tweet_layout.xml
+++ b/res/layout/tweet_layout.xml
@@ -28,91 +28,61 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:ems="10"
             android:gravity="top"
-            android:inputType="textMultiLine" >
+            android:inputType="textMultiLine"
+            android:textAppearance="@android:style/TextAppearance.Medium" >
 
             <requestFocus />
         </EditText>
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:orientation="vertical" >
+            android:layout_marginLeft="10dp"
+            android:clickable="true"
+            android:focusable="true" >
 
-            <TableRow
-                android:id="@+id/tableRow1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="right|center_vertical"
-                android:scrollbarStyle="outsideInset"
-                android:scrollbars="horizontal" >
+            <ImageButton
+                android:id="@+id/imageButton_clean"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/icon_clean" />
 
-                <ImageButton
-                    android:id="@+id/imageButton_morse"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_morse" />
+            <ImageButton
+                android:id="@+id/imageButton_warota"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/icon_warota" />
 
-                <ImageButton
-                    android:id="@+id/imageButton_warota"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_warota" />
+            <ImageButton
+                android:id="@+id/imageButton_submit"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/icon_submit" />
+        </LinearLayout>
 
-                <ImageButton
-                    android:id="@+id/imageButton_submit"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_submit" />
-            </TableRow>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:clickable="true"
+            android:focusable="true" >
 
-            <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp" >
+            <ImageButton
+                android:id="@+id/imageButton_menu"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/icon_menu" />
 
-                <ImageButton
-                    android:id="@+id/imageButton_replace"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_replace" />
+        </LinearLayout>
 
-                <ImageButton
-                    android:id="@+id/imageButton_template"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_templates" />
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp" >
-
-                <ImageButton
-                    android:id="@+id/imageButton_hashtag"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/icon_hash" />
-            </TableRow>
-        </TableLayout>
     </LinearLayout>
 
 </ScrollView>
