--- a/res/layout/tweet_layout.xml
+++ b/res/layout/tweet_layout.xml
@@ -54,16 +54,6 @@
                 android:src="@drawable/icon_clean" />
 
             <ImageButton
-                android:id="@+id/imageButton_warota"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="15dp"
-                android:background="@android:drawable/btn_default_small"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_warota" />
-
-            <ImageButton
                 android:id="@+id/imageButton_submit"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -84,14 +74,14 @@
             android:focusable="true" >
 
             <Button
-                android:id="@+id/imageButton_menu"
+                android:id="@+id/button_tweetmenu"
                 android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:background="@android:drawable/btn_default_small"
                 android:text="Menu"
-                android:textColor="@color/Red"
-                android:textSize="20sp" />
+                android:textColor="@color/MetroBlue"
+                android:textSize="16sp" />
 
         </LinearLayout>
     </LinearLayout>
