--- a/res/layout/event_layout.xml
+++ b/res/layout/event_layout.xml
@@ -1,51 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:padding="5dp">
+    android:layout_height="match_parent"
+    android:padding="1dp">
 
-    <ImageView
-        android:id="@+id/imageView_icon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"/>
-
-    <TextView
-        android:id="@+id/textView_header"
+    <RelativeLayout
+        android:id="@+id/relativeLayout_toastBase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/imageView_icon"
-        android:gravity="top" />
+        android:layout_gravity="top"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView_header"
-        android:layout_alignLeft="@+id/textView_header"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="1dp" />
+        <TextView
+            android:id="@+id/textView_toastText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="top"
+            android:paddingBottom="2dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="2dp"
+            android:text="Text"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <TextView
-        android:id="@+id/textView_footer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView_text"
-        android:layout_marginRight="2dp"/>
+        <LinearLayout
+            android:id="@+id/linearLayout_toastBody"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/textView_toastText"
+            android:layout_gravity="top"
+            android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView_favorited"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView_header"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignTop="@+id/textView_header"
-        android:src="@drawable/icon_favorite" />
+        </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
