--- a/res/layout/tweet_layout.xml
+++ b/res/layout/tweet_layout.xml
@@ -54,6 +54,16 @@
                 android:src="@drawable/icon_clean" />
 
             <ImageButton
+                android:id="@+id/imageButton_menu"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="15dp"
+                android:background="@android:drawable/btn_default_small"
+                android:padding="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_menu" />
+
+            <ImageButton
                 android:id="@+id/imageButton_submit"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -65,23 +75,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="15dp"
             android:clickable="true"
             android:focusable="true" >
-
-            <Button
-                android:id="@+id/button_tweetmenu"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_marginRight="10dp"
-                android:background="@android:drawable/btn_default_small"
-                android:text="Menu"
-                android:textColor="@color/MetroBlue"
-                android:textSize="16sp" />
 
         </LinearLayout>
     </LinearLayout>
