定型文機能完成。 Close #11, Close #12

--- a/res/layout/menuitem_layout.xml
+++ b/res/layout/menuitem_layout.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/textView_menuItem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
         android:layout_marginTop="14dp"
