--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -5,6 +5,8 @@
     <CheckBoxPreference android:key="@string/key_setting_aftersubmit" android:defaultValue="true" android:title="投稿後にTLに戻る"/>
 </PreferenceCategory>
 
-<PreferenceCategory android:title="その他" android:shouldDisableView="false"><Preference android:title="Powered by twitter4j" android:summary="Apache License 2.0" android:key="@string/key_setting_t4j" /></PreferenceCategory>
+<PreferenceCategory android:title="その他" android:shouldDisableView="false"><Preference android:key="@string/key_setting_delete_accounts" android:summary="再起動後に認証してね" android:title="認証情報を削除"/><Preference android:title="Powered by twitter4j" android:summary="Apache License 2.0" android:key="@string/key_setting_t4j" />
+
+</PreferenceCategory>
 
 </PreferenceScreen>
