--- a/res/layout/checkboxitem_layout.xml
+++ b/res/layout/checkboxitem_layout.xml
@@ -4,15 +4,11 @@
 	android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView_menuItem"
+    <CheckBox
+        android:id="@+id/checkBox_checkboxItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
-        android:layout_marginTop="14dp"
-        android:paddingLeft="10dp"
-        android:text="Text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="CheckBox"
         android:textColor="@color/White" />
     
     <FrameLayout 
