UserEventが通知されないバグを修正　β1.2.1

--- a/res/layout/listpage_layout.xml
+++ b/res/layout/listpage_layout.xml
@@ -7,6 +7,8 @@
         android:id="@+id/listView_listpage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/textView_listpage"
         android:layout_centerHorizontal="true" >
 
