--- a/res/layout/event_layout.xml
+++ b/res/layout/event_layout.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:padding="1dp">
+    android:padding="1dp" >
 
     <RelativeLayout
         android:id="@+id/relativeLayout_toastBase"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textView_toastText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
             android:layout_gravity="top"
+            android:gravity="fill_horizontal"
             android:paddingBottom="2dp"
             android:paddingLeft="5dp"
             android:paddingTop="2dp"
@@ -26,10 +25,8 @@
 
         <LinearLayout
             android:id="@+id/linearLayout_toastBody"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="false"
-            android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView_toastText"
             android:layout_gravity="top"
             android:orientation="vertical" >
