--- a/res/layout/tweet_layout.xml
+++ b/res/layout/tweet_layout.xml
@@ -35,56 +35,104 @@
             <requestFocus />
         </EditText>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="10dp"
-            android:clickable="true"
-            android:focusable="true" >
-
-            <ImageButton
-                android:id="@+id/imageButton_clean"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="15dp"
-                android:background="@android:drawable/btn_default_small"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_clean" />
-
-            <ImageButton
-                android:id="@+id/imageButton_menu"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="15dp"
-                android:background="@android:drawable/btn_default_small"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_menu" />
-
-            <ImageButton
-                android:id="@+id/imageButton_submit"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="10dp"
-                android:background="@android:drawable/btn_default_small"
-                android:padding="0dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_submit" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="15dp"
             android:clickable="true"
-            android:focusable="true" >
+            android:focusable="true"
+            android:orientation="horizontal"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="horizontal"
+            android:splitMotionEvents="true" >
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:splitMotionEvents="true" >
+
+                <ImageButton
+                    android:id="@+id/imageButton_clean"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@android:drawable/btn_default_small"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_clean" />
+
+                <ImageButton
+                    android:id="@+id/imageButton_menu"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@android:drawable/btn_default_small"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_menu" />
+
+                <ImageButton
+                    android:id="@+id/imageButton_submit"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@android:drawable/btn_default_small"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_submit" />
+
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:clickable="false"
+                android:splitMotionEvents="true" >
+
+                <ImageButton
+                    android:id="@+id/imageButton_pict"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@android:drawable/btn_default_small"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_pict" />
+
+                <ImageButton
+                    android:id="@+id/imageButton_camera"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@android:drawable/btn_default_small"
+                    android:padding="0dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_camera" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout_tweet_obj"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:clickable="false"
+            android:focusable="true"
+            android:splitMotionEvents="true" >
 
         </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
