--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -5,6 +5,7 @@
     <CheckBoxPreference android:key="@string/key_setting_aftersubmit" android:defaultValue="true" android:title="投稿後にTLに戻る"/>
     <CheckBoxPreference android:title="あんふぁぼ通知" android:key="@string/key_setting_notice_unfav" android:summary="する？" android:defaultValue="false"/>
     <CheckBoxPreference android:title="自動でIMEを開く" android:key="@string/key_setting_open_ime" android:defaultValue="true"/>
+    <CheckBoxPreference android:key="@string/key_setting_confirm_dialog" android:summary="安全装置" android:title="いちいち確認する" android:defaultValue="true"/>
 </PreferenceCategory>
 
 <PreferenceCategory android:title="その他" android:shouldDisableView="false"><Preference android:key="@string/key_setting_delete_accounts" android:summary="再起動後に認証してね" android:title="認証情報を削除"/><Preference android:title="Powered by twitter4j" android:summary="Apache License 2.0" android:key="@string/key_setting_t4j" />
