--- a/res/layout/status_layout.xml
+++ b/res/layout/status_layout.xml
@@ -34,8 +34,8 @@
         android:id="@+id/textView_footer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/textView_text"
+        android:layout_alignLeft="@+id/textView_text"
         android:layout_marginRight="2dp"/>
 
     <ImageView
