--- a/res/layout/post_layout.xml
+++ b/res/layout/post_layout.xml
@@ -5,8 +5,6 @@
     android:background="@color/White" >
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res/net.miz_hi.smileessence"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -17,7 +15,7 @@
             android:id="@+id/textView_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -148,7 +146,7 @@
             android:padding="1dp" >
 
             <Button
-                android:id="@+id/btn_submit"
+                android:id="@+id/listpage_refresh"
                 style="@style/whiteBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
