--- a/res/layout/menuparent_white.xml
+++ b/res/layout/menuparent_white.xml
@@ -4,14 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/LightGray"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+
+    <ImageView
+        android:id="@+id/menuparent_indicator"
+        android:layout_width="25dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/expand_close" />
 
     <TextView
         android:id="@+id/textView_menuItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="16dp"
         android:paddingLeft="10dp"
         android:text="Text"
